tests/src/frontend/typechecking/exhaustiveness/invalid/non_nested_char.sk
fun test(): String {
  'c' match {
  | 'a' -> "Fail\n"
  | 'b' -> "Fail\n"
  }
}
